# PathWise-ZSH-Plugin

./: -filter=.  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  build_plugin.py  current.toml  install.sh  pathwise.plugin.zsh  pathwise_export.toml  pyproject.toml  python_work.toml  test_improved.toml  uninstall.sh
docs/: git_tracker.md  tips.md
issues/: 01-workflow-recording-feature.md  02-smart-directory-notes.md  03-cumulative-frequency-sorting.md  04-project-aware-consolidation.md
python/: __init__.py
python/constants/: __init__.py  colors.py  git_tracker.py  project_indicators.py  tips.py  tools.py
python/logic/: __init__.py  git_tracker.py  project_detector.py
